internal/modules/xray/testdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        managed-by: personal-server
        nginx.ingress.kubernetes.io/configuration-snippet: |
            proxy_set_header Upgrade $http_upgrade;
            proxy_set_header Connection "upgrade";
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
        nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    creationTimestamp: null
    labels:
        app: xray
        managed-by: personal-server
    name: xray
    namespace: infra
spec:
    rules:
        - host: example.com
          http:
            paths:
                - backend:
                    service:
                        name: xray
                        port:
                            number: 10000
                  path: /vpn-secret-path
                  pathType: Prefix
    tls:
        - hosts:
            - example.com
          secretName: xray-tls
status:
    loadBalancer: {}
