internal/modules/xray/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        app: xray
        managed-by: personal-server
    name: xray
    namespace: infra
spec:
    ports:
        - name: xray
          port: 10000
          protocol: TCP
          targetPort: 10000
    selector:
        app: xray
    type: ClusterIP
status:
    loadBalancer: {}
